style.css
body {
    background-color: black;
    color: white;
}

.full-width {
    width: 100%;
    height: auto;
}

.modal-content {
    background-color: black;
    color: white;
    border: 1px solid white;
}

/* Style the dropdown list */
select {
    color: white;
    background-color: black;
    border: 1px solid white;
}

/* Style the dropdown options */
select option {
    color: black;
    background-color: white;
}

.dropdown-menu.bg-dark a {
    color: white;
}

.modal-lg .modal-content {
    font-size: 1.5rem;
    padding: 1.5rem;
}

.modal-lg .modal-title {
    font-size: 2rem;
}

.modal-lg .btn {
    font-size: 1.5rem;
}

.modal-lg .dropdown-toggle {
    font-size: 1.5rem;
}

.modal-lg .dropdown-menu {
    font-size: 1.5rem;
}

.center {
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

.overlay-button {
    position: absolute;
    font-size: 3rem;
    padding: 3rem;
}

#webcam-button {
    background-color: transparent;
    border: none;
    top: 10px;
    right: 10px;
}

#settings-button {
    background-color: transparent;
    border: none;
    top: 10px;
    left: 10px;
}

@media (max-width: 768px) {
    .overlay-button {
        font-size: 3rem;
        padding: 2rem;
    }
}

#loading-screen {
    z-index: 9999;
    background: black;
    display: none;
}

.spinner-border {
    width: 5rem;
    height: 5rem;
    color: #2ad2c9;
    border-width: 0.5rem;
}

.modal-body {
    display: flex;
    align-items: center;
}
.form-range {
    width: 100%;
}

.modal-footer .btn {
    font-size: 1.5rem;
    padding: 10px 20px;
}

#errorModalLabel {
    font-size: 2rem;
}

/* #error-message-text {
    font-size: 1.5rem;
} */

.error-message {
    display: flex;
    justify-content: center;
    align-items: center;
}

.btn.btn-primary#webcam-button,
.btn.btn-primary#settings-button {
    border: none;
}

.btn.btn-primary#webcam-button:focus,
.btn.btn-primary#settings-button:focus {
    outline: none;
    box-shadow: none;
}

